<resources>
    <string name="app_name">易点天气</string>
    <string name="PhoneEd">请输入电话号码</string>
    <string name="Code">请输入验证码</string>
    <string name="getCode">获取验证码</string>
    <string name="Indentity">验证</string>
    <string name="modify">修改</string>
    <string name="input_password">请输入你的密码</string>
    <string name="again_password">请确认你的密码</string>
    <string name="forgetEdt">请输入你的手机号</string>
    <string name="startToNext">下一步</string>
</resources>
