<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/PhoneEd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:hint="@string/PhoneEd"
        android:inputType="phone" />

    <EditText
        android:id="@+id/Code"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/PhoneEd"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/getcode_drawable"
        android:gravity="center"
        android:hint="@string/Code"
        android:inputType="text" />

    <Button
        android:id="@+id/getCode"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/PhoneEd"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/getcode_drawable"
        android:text="@string/getCode"
        android:textColor="#499BF7" />


    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/Code"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"

        android:background="@drawable/getcode_drawable"
        android:gravity="center"
        android:hint="@string/input_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/again_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/input_password"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/getcode_drawable"
        android:gravity="center"
        android:hint="@string/again_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/Indentity"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/again_password"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/identity_drawable"
        android:text="@string/Indentity"
        android:textColor="#FFFFFF" />
</RelativeLayout>
