<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">




    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"

        android:background="@drawable/getcode_drawable"
        android:gravity="center"
        android:hint="@string/input_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/again_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/input_password"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/getcode_drawable"
        android:gravity="center"
        android:hint="@string/again_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/Indentity"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/again_password"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/identity_drawable"
        android:text="@string/Indentity"
        android:textColor="#FFFFFF" />
</RelativeLayout>
